增加请求头值的处理